--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -180,6 +180,7 @@ jobs:
           sudo snap set lxd daemon.group=adm
           sudo lxd init --auto
           snap list
+          sudo apt install -y linux-modules-extra-$(uname -r)
 
       - name: Run system tests
         run: MICROOVN_COVERAGE_ENABLED=yes make tests/${{ matrix.test-file }}
