Changes microovn bgp to use a veth pair
Adds netplan integration, which is so far only used to generate a veth
pair, I would like to expand it to include the interface bridge created
and also rework how you build a netplan yaml file.

The main change is this avoids remastering the eth-bgp interface to the
vrf, we instead have a veth peer with one side on ovn and the other on
the vrf.

Signed-off-by: MJ Ponsonby <mj.ponsonby@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -49,6 +49,7 @@ apps:
       - network
       - network-bind
       - network-control
+      - network-setup-control
     slots:
       - microovn
 
@@ -190,6 +191,7 @@ parts:
   dqlite:
     source: https://github.com/canonical/dqlite
     source-type: git
+    source-tag: v1.17.1
     source-depth: 1
     source-tag: v1.17.1
     plugin: autotools
