Use BIRD from package instead of building
This moves us to consuming bird from birdv3 instead of manually building
this. This does require us to set up the default bird config within the
install hook instead of as part of the snap build but that shouldn't
affect the end user.

Signed-off-by: MJ Ponsonby <mj.ponsonby@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -207,31 +207,21 @@ parts:
       - lib/*/libuv*so*
 
   bird:
-    plugin: autotools
-    source: https://gitlab.nic.cz/labs/bird.git
-    source-type: git
-    source-tag: v3.1.4
-    autotools-configure-parameters:
-      - --prefix=/usr
-      - --sysconfdir=/etc/bird
-      - --mandir=/usr/share/man
-      - --infodir=/usr/share/info
-      - --localstatedir=/var
-      - --runstatedir=/run/bird
-      - --docdir=/usr/share/bird3
-      - --enable-client
-    build-packages:
-      - gcc
-      - autoconf
-      - libtool
-      - bison
-      - flex
-      - libncurses-dev
-      - libreadline-dev
+    plugin: nil
+    stage-packages:
+      - bird3
+      - libssh-4
     override-prime: |
       craftctl default
-      # shrink the default bird.conf to bare minimum
+      mkdir -p $CRAFT_PRIME/etc/bird
       printf "log syslog all;\nprotocol device {};\n" > $CRAFT_PRIME/etc/bird/bird.conf
+    organize:
+      usr/lib/: lib/
+    prime:
+      - usr/sbin/bird
+      - usr/sbin/birdc
+      - lib/*/libssh.so.*
+      - etc/bird/**
   ovn:
     plugin: nil
     stage-packages:
